<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

	<TextView
	    android:id="@+id/statusMsg"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:lines="1"
	    android:text="@string/drawCharMsg" />

	<TextView
	    android:id="@+id/keywordDisplay"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:lines="2"
	    android:text="@string/sampleKeyword"
	    android:textSize="18sp"
	    android:textStyle="bold" />
	
	<TextView
	    android:id="@+id/charDisplay"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:lines="1"
	    android:text="@string/defaultChars"
	    android:textSize="72sp" />

	<HorizontalScrollView
	    android:id="@+id/horizontalScrollView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/charSubtitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:lines="1"
	            android:text="@string/charInfo_sample" />

	    </LinearLayout>
	</HorizontalScrollView>

	<Button
	    android:id="@+id/btnShow"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/charDraw_show" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnCorrect"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:enabled="false"
		    android:text="@string/charDraw_correct"
		    tools:ignore="ButtonStyle" />

		<Button
		    android:id="@+id/btnIncorrect"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:enabled="false"
		    android:text="@string/charDraw_incorrect"
		    tools:ignore="ButtonStyle" />
	
	</LinearLayout>

</LinearLayout>
