<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

	<TextView
	    android:id="@+id/statusMsg"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/charGuessMsg"/>
	
	<TextView
	    android:id="@+id/charDisplay"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/defaultChars"
	    android:textSize="72sp"/>

	<HorizontalScrollView
	    android:id="@+id/horizontalScrollView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/charInfo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:maxLines="1"
	            android:text="@string/charInfo_sample" />

	    </LinearLayout>
	</HorizontalScrollView>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <EditText
	        android:id="@+id/charNameInput"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/charInputHint"
	        android:imeOptions="actionNext"
	        android:inputType="text"
	        android:lines="1" >
	
	        <requestFocus />
	    </EditText>
	
	    <Button
	   		android:id="@+id/charInputBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        android:text="@string/charInputBtnEnter"/>
	
	</LinearLayout>

</LinearLayout>
