<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity$DummySectionFragment" >
	    
	<TextView
	    android:id="@+id/textChar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:fontFamily="serif"
	    android:layout_alignParentRight="true"
	    android:text="@string/defaultChars"
	    android:textSize="18pt" />

	<TextView
	    android:id="@+id/textCharacterId"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textChar"
	    android:layout_alignParentLeft="true"
	    android:ems="4"
	    android:gravity="left"
	    android:text="@string/sampleCharNum"
	    android:textAlignment="gravity"
	    android:textSize="5pt" />

	<TextView
	    android:id="@+id/textKeyword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/sampleCharName"
	    android:textSize="8pt" />

	<TextView
	    android:id="@+id/textSubtitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textChar"
	    android:layout_alignTop="@+id/textChar"
	    android:layout_toRightOf="@+id/textKeyword"
	    android:layout_toLeftOf="@+id/textChar"
	    android:paddingLeft="3dp"
	    android:paddingRight="3dp"
	    android:scrollHorizontally="true"
	    android:scrollbarAlwaysDrawVerticalTrack="false"
	    android:scrollbars="horizontal"
	    android:text="@string/charInfo_sample"
	    android:textSize="12sp" />

</RelativeLayout>
