<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

	<TextView
	    android:id="@+id/statusMsg"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	    android:text="@string/section_selection_text" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="?android:attr/buttonBarStyle">

		<Button
		    android:id="@+id/sel_selectAllBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/sel_selectAll" 
		    style="?android:attr/buttonBarButtonStyle" />

		<Button
		    android:id="@+id/sel_clearAllBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/sel_clearAll"
		    style="?android:attr/buttonBarButtonStyle" />

	</LinearLayout>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

	    <LinearLayout
	        android:id="@+id/sectionSelLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        tools:ignore="UselessLeaf" >

	    </LinearLayout>
	</ScrollView>

	<Button
	    android:id="@+id/sel_btn_confirm"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/sel_btn_update" />

</LinearLayout>
